# pubchem_shape

./: .gitmodules  CMakeLists.txt  README.md  rdkit_align3d_test.cpp  rdkit_shape.cpp  rdkit_shape.hpp  sdf_align.cpp  shape_constants.hpp  shape_debug.hpp  shape_exp_lookup.hpp  shape_exp_lookup_trunc.hpp  shape_functions.hpp  shape_functions1.cpp  shape_functions2.cpp  shape_math_functions.hpp  shape_neighbor.cpp  test.cpp  types.hpp
Wrap/: CMakeLists.txt  cshapealign.cpp
pubchem_shape/: __init__.py  test_rdshapealign.py
test_data/: test1.sdf
